Login and resource

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,12 +69,8 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li>
-                        <p class="centered">
-                            <a href="profile.html">
-                                <img src="img/ui-sam.jpg" class="img-circle" width="80">
-                            </a>
-                        </p>
-                        <h5 class="centered">Sam Soffes</h5>
+                        <label style="color:red"> 夹具出入库登记</label>
+                       
                     </li>
 
                 </ul>
@@ -89,7 +85,6 @@
                 </div>
             </section>
         </section>
-
     </section>
 </body>
 
