--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,26 @@
 ﻿
 @{
-  ViewBag.Title="Index";
+    ViewBag.Title = "Index";
 }
-<link rel="stylesheet" href="~/Content/bootstrap.min.css" />
- <div> 
+<!DOCTYPE html>
+<html lang="en">
 
- </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
 
+    <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
+
+    <script src="~/Scripts/bootstrap.min.js"></script>
+</head>
+<body>
+    <div>
+        <p>公司介绍</p>
+    </div>
+
+</body>
+</html>
