--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Content/Layout.css" rel="stylesheet">
-    <script>
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
 
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            //修复collapse不能正常折叠的问题
+            $(".collapsed").click(function () {
+                var itemHref = $(this).attr("href");
+                var itemClass = $(itemHref).attr("class");
+                if (itemClass === "nav-list collapse") {
+                    $(itemHref).attr("class", "nav-list collapse in").css("height", "auto");
+                } else {
+                    $(itemHref).attr("class", "nav-list collapse").css("height", "0px");
+                }
+                return false;//停止运行bootstrap自带的函数
+            });
+        })
     </script>
+
 </head>
 
 <body>
@@ -21,11 +35,10 @@
         <!--header start-->
         <header class="header black-bg">
             <div class="sidebar-toggle-box">
-                <div class="fa fa-bars tooltips">
-                </div>
+                <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
             </div>
             <!--logo start-->
-            <a href="index.html" class="logo"><b>Ja<span>bil</span></b></a>
+            <a href="/Home/Index" class="logo"><b>Ja<span>bil</span></b></a>
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
                 <!--  notification start -->
@@ -34,7 +47,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" href="index.html#">
                             <i class="fa fa-tasks"></i>
-                            <!-- <span class="badge bg-theme">4</span> -->
+                            <span class="badge bg-theme">4</span>
                         </a>
                     </li>
                     <!-- settings end -->
@@ -42,7 +55,7 @@
                     <li id="header_inbox_bar" class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
                             <i class="fa fa-envelope-o"></i>
-                            <!-- <span class="badge bg-theme">5</span> -->
+                            <span class="badge bg-theme">5</span>
                         </a>
                     </li>
                     <!-- inbox dropdown end -->
@@ -50,7 +63,7 @@
                     <li id="header_notification_bar" class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
                             <i class="fa fa-bell-o"></i>
-                            <!-- <span class="badge bg-warning">7</span> -->
+                            <span class="badge bg-warning">7</span>
                         </a>
                     </li>
                     <!-- notification dropdown end -->
@@ -59,7 +72,10 @@
             </div>
             <div class="top-menu">
                 <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
+                    <li><b class="wel">欢迎您</b></li>
+                    <li><span id="user">112312322</span></li>
+                    <li><a class="logout" href="/Login/Index">Logout</a></li>
+
                 </ul>
             </div>
         </header>
@@ -68,11 +84,34 @@
             <div id="sidebar" class="nav-collapse ">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
-                    <li>
-                        <label style="color:red"> 夹具出入库登记</label>
-                       
+                    <li class="sub-menu active" role="presentation">
+                        <a href="#Collapse" class="nav-header collapsed " data-toggle="collapse" data-parent="#nav-accordion">
+                            <i class="fa fa-edit" aria-hidden="true"></i>
+                            <span>夹具出入库登记</span>
+                        </a>
+                        <ul id="Collapse" class=" nav-list collapse in">
+                            <li><a href="#">出库登记</a></li>
+                            <li><a href="#">入库登记</a></li>
+                        </ul>
                     </li>
-
+                    <li class="sub-menu ">
+                        <a href="javascript:;">
+                            <i class="fa fa-wrench" aria-hidden="true"></i>
+                            <span>夹具报修</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="fa fa-trash" aria-hidden="true"></i>
+                            <span>夹具报废</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="fa fa-trash" aria-hidden="true"></i>
+                            <span>夹具采购</span>
+                        </a>
+                    </li>
                 </ul>
                 <!-- sidebar menu end-->
             </div>
