--- a/Views/Test/Index.cshtml
+++ b/Views/Test/Index.cshtml
@@ -10,13 +10,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css">
 
+    @*<link rel="stylesheet" href="~/Content/bootstrap.min.css">
+        <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/Content/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css" />
+    <style>
+        /* 覆盖样式*/
+        /*.table-striped > tbody > tr:nth-of-type(odd) {
+            background-color: dodgerblue;
+        }
+
+        .table-striped > tbody > tr:nth-of-type(even) {
+            background-color:dodgerblue
+        }*/
+
+        .table .thead-blue th {
+            color: #fff;
+            background-color: #3195f1;
+            border-color: #0d7adf;
+        }
+
+        .table-hover > tbody >  tr:nth-child(odd):hover > td,
+        .table-hover > tbody >  tr:nth-child(odd):hover > th,
+        .table-hover > tbody >  tr:nth-child(even):hover > td,
+        .table-hover > tbody >  tr:nth-child(even):hover > th{
+            background-color:aqua;
+        }
+    </style>
+    @*<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>*@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
     <!-- Latest compiled and minified Locales -->
@@ -25,23 +48,21 @@
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
         <div id="toolbar" class="btn-group">
-            <button id="btn_add" type="button" class="btn btn-default" data-toggle="modal" data-target="#addModal">
+            <button id="btn_add" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">
                 <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                 <span>新增</span>
             </button>
-            <button id="btn_update" type="button" class="btn btn-default">
+            <button id="btn_update" type="button" class="btn btn-warning">
                 <i class="glyphicon glyphicon-pencil" aria-hidden="true"></i>
                 <span>编辑</span>
             </button>
-            <button id="btn_delete" type="button" class="btn btn-default" onclick="BtchDeleteBook()">
+            <button id="btn_delete" type="button" class="btn btn-danger" onclick="BtchDeleteBook()">
                 <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
                 <span>删除</span>
             </button>
         </div>
         <!-- <button type="button" id="download" style="margin-left:50px" id="btn_download" class="btn btn-primary" onClick ="$(‘#myTable‘).tableExport({ type: ‘excel‘, escape: ‘false‘ })">数据导出</button> -->
-        <table id="myTable">
-
-
+        <table id="myTable" class="table-striped">
         </table>
         <!-- 添加 -->
         <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -83,10 +104,21 @@
     <script type="text/javascript">
 
         $(function () {
-            var itable = TableInit();//.初始化Table
+            var itable = TableInit();//.初始化 Table
             itable.Init();
 
         });
+
+        function rowStyle(row, index) {
+            //alert(index);
+            var classes = ['active', 'success', 'info', 'warning', 'danger'];
+            if (index % 2 === 0) {
+                return {
+                    classes: classes[index % classes.length]
+                };
+            }
+            return {};
+        }
         function changeDateFormat(cellval) {
             if (cellval != null) {
                 var date = new Date(parseInt(cellval.replace("/Date(", "").replace(")/", ""), 10));
@@ -101,70 +133,72 @@
         };
         var TableInit = function () {
             var myTableInit = new Object();
-            //.初始化Table
+            //.初始化 Table
             myTableInit.Init = function () {
                 $("#myTable").bootstrapTable({
                     url: '/Test/DoTest',
                     method: 'post',
                     toolbar: '#toolbar',//工具列
-                    striped: true,//隔行换色
+                    rowStyle: rowStyle,
+                    theadClasses: "thead-blue",//设置thead-blue为表头样式
                     cache: false,//禁用缓存
                     pagination: true,//关闭分页
                     showFooter: false,//是否显示列脚
-                    showPaginationSwitch: true,//是否显示 数据条数选择框
+                    showPaginationSwitch: false,//是否显示 数据条数选择框
                     sortable: false,//排序
                     search: true,//启用搜索
+                    showSearchButton: true,//
                     showFullscreen: true,//全屏按钮
-                    /* showToggle:true,//显示详细视图和列表 */
-                    showColumns: true,//是否显示 内容列下拉框
+                    showToggle: true,//显示详细视图和列表
+                    showColumns: true,
                     showRefresh: true,//显示刷新按钮
                     clickToSelect: true,//点击选中checkbox
-                    pageNumber: 1,//初始化加载第一页，默认第一页
-                    pageSize: 3,   //每页的记录行数
-                    pageList: [1, 2, 3, 4, 5],//可选择的每页行数
+                    pageNumber: 1, //初始化加载第一页，默认第一页
+                    pageSize: 7,   //每页的记录行数
+                    pageList: [3, 5, 7, 9, 'ALL'], //可供选择的页面显示条数
+                    maintainSelected: true, //记住选中项即使翻页
                     paginationPreText: "上一页",
                     paginationNextText: "下一页",
                     paginationFirstText: "First",
                     paginationLastText: "Last",
+                    clickToSelect: true,  //是否启动点击选中行
 
-                    showExport: true,  //是否显示导出按钮
-                    buttonsAlign: "right",  //按钮位置
-                    exportTypes: ['excel', 'json', 'txt', 'csv', 'xml'],  //导出文件类型
                     Icons: 'glyphicon-export ',
                     columns: [{
-                            title: "全选", field: "select", checkbox: true
+                        title: "全选", field: "select", checkbox: true
                     }, {
-                            field: 'Code',
-                            title: '夹具代码',
-                            switchable: true
+                        field: 'Code',
+                        title: '夹具代码',
+                        visable: true,
+                        sortable: true
                     }, {
-                            field: 'SeqID',
-                            title: '夹具序列号',
-                            switchable: true
+                        field: 'SeqID',
+                        title: '夹具序列号',
+                        visable: true
                     }, {
-                            field: 'BillNo',
-                            title: '采购单号',
-                            switchable: true
+                        field: 'BillNo',
+                        title: '采购单号',
+                        visable: true
                     }, {
-                            field: 'RegDate',
-                            title: '入库日期',
-                            switchable: true,
-                             formatter: function (value, row, index) {
-                                  return changeDateFormat(value)
-                             }
+                        field: 'RegDate',
+                        title: '入库日期',
+                        visable: true,
+                        formatter: function (value, row, index) {
+                            return changeDateFormat(value)
+                        }
                     }, {
-                            field: 'UsedCount',
-                            title: '使用次数',
-                            switchable: true,
-                            sortable: true
+                        field: 'UsedCount',
+                        title: '使用次数',
+                        visable: true,
+
                     }, {
-                            field: 'Location',
-                            title: '存放库位',
-                            switchable: true
-                    },],
+                        field: 'Location',
+                        title: '存放库位',
+                        visable: true
+                    },]
                 });
             };
-             return myTableInit;
+            return myTableInit;
         }
     </script>
 
