--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -1,65 +1,49 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-}
 <!DOCTYPE html>
-<html lang="en">
 
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css" />
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
+    <!-- Latest compiled and minified Locales -->
+    <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/locale/bootstrap-table-zh-CN.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js"></script>
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <style>
-        /* 覆盖样式*/
-        /*.table-striped > tbody > tr:nth-of-type(odd) {
-            background-color: dodgerblue;
-        }
 
-        .table-striped > tbody > tr:nth-of-type(even) {
-            background-color:dodgerblue
-        }*/
-
+        /*表头样式*/
         .table .thead-blue th {
             color: #fff;
             background-color: #3195f1;
             border-color: #0d7adf;
         }
-
-        .table-hover > tbody >  tr:nth-child(odd):hover > td,
-        .table-hover > tbody >  tr:nth-child(odd):hover > th,
-        .table-hover > tbody >  tr:nth-child(even):hover > td,
-        .table-hover > tbody >  tr:nth-child(even):hover > th{
-            background-color:aqua;
+        /*行 hover*/
+        .table-hover > tbody > tr:nth-child(odd):hover > td,
+        .table-hover > tbody > tr:nth-child(odd):hover > th,
+        .table-hover > tbody > tr:nth-child(even):hover > td,
+        .table-hover > tbody > tr:nth-child(even):hover > th {
+            background-color: aquamarine;
         }
     </style>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
-    <!-- Latest compiled and minified Locales -->
-    <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/locale/bootstrap-table-zh-CN.min.js"></script>
 </head>
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
         <div id="toolbar" class="btn-group">
-            <button id="btn_add" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">
+            <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addOutRecordModal">
                 <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                 <span>新增</span>
             </button>
-            <button id="btn_update" type="button" class="btn btn-warning">
-                <i class="glyphicon glyphicon-pencil" aria-hidden="true"></i>
-                <span>编辑</span>
-            </button>
-            <button id="btn_delete" type="button" class="btn btn-danger" onclick="BtchDeleteBook()">
-                <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
-                <span>删除</span>
-            </button>
+
         </div>
         <!-- <button type="button" id="download" style="margin-left:50px" id="btn_download" class="btn btn-primary" onClick ="$(‘#myTable‘).tableExport({ type: ‘excel‘, escape: ‘false‘ })">数据导出</button> -->
-        <table id="myTable" class="table-striped">
+        <table id="outRecordTable" class="table-striped">
         </table>
         <!-- 添加 -->
-        <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal fade" id="addOutRecordModal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -67,29 +51,32 @@
                         <h4 class="modal-title" id="myModalLabel">添加记录</h4>
                     </div>
                     <div class="modal-body">
-                        <form role="form" action="javascript:void(0)" id="addForm">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="goodsName" placeholder="请输入商品名称">
+                        <form action="/OutRecord/AddOutRecord" method="post">
+                            <span>夹具代码</span>
+                            <input type="text" name="code" placeholder="请输入夹具代码" />
+                            <br>
+                            <span>夹具序列号</span>
+                            <input type="text" name="seqID" placeholder="请输入夹具代码" />
+                            <br>
+                            <span>领用人</span>
+                            <input type="text" name="usedByName" placeholder="请输入夹具代码" />
+                            <br>
+                            <span>操作人</span>
+                            <input type="text" name="operationByName" placeholder="请输入夹具代码" />
+                            <br>
+                            <span>产线ID</span>
+                            <input type="text" name="proLineID" placeholder="请输入夹具代码" />
+                            <br>
+                            <span>领用日期</span>
+                            <input type="text" name="usedDate" placeholder="请输入夹具代码" id="date" />
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">取消</button>
+                                <button type="submit" class="btn btn-warning">提交</button>
                             </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="goodsPrice" placeholder="请输入商品价格">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="goodsType" placeholder="请输入商品型号">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="statusId" placeholder="请输入商品状态">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="goodsStore" placeholder="请输入商品数量">
-                            </div>
-
                         </form>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                            <button type="button" class="btn btn-primary" id="addRecord">提交</button>
-                        </div>
                     </div>
+                   
+
                 </div>
             </div>
         </div>
@@ -103,16 +90,24 @@
 
         });
 
-        function rowStyle(row, index) {
-            //alert(index);
-            var classes = ['active', 'success', 'info', 'warning', 'danger'];
-            if (index % 2 === 0) {
-                return {
-                    classes: classes[index % classes.length]
-                };
-            }
-            return {};
+        function addOutRecord() {
+
         }
+
+
+        //操作事情
+        function operationEvents() {
+
+
+        }
+        //行样式
+        function rowStyle(row, index) {
+
+            var classes = ['success', 'danger']
+            return { classes: classes[index % classes.length] };
+        }
+
+        //日期格式化
         function changeDateFormat(cellval) {
             if (cellval != null) {
                 var date = new Date(parseInt(cellval.replace("/Date(", "").replace(")/", ""), 10));
@@ -126,11 +121,11 @@
             }
         };
         var TableInit = function () {
-            var myTableInit = new Object();
+            var outRecordTableInit = new Object();
             //.初始化 Table
-            myTableInit.Init = function () {
-                $("#myTable").bootstrapTable({
-                    url: '/Test/DoTest',
+            outRecordTableInit.Init = function () {
+                $("#outRecordTable").bootstrapTable({
+                    url: '/OutRecord/ReadOutRecords',
                     method: 'post',
                     toolbar: '#toolbar',//工具列
                     rowStyle: rowStyle,
@@ -163,36 +158,47 @@
                     }, {
                         field: 'Code',
                         title: '夹具代码',
-                        visable: true,
-                        sortable: true
+                        visable: true
                     }, {
                         field: 'SeqID',
                         title: '夹具序列号',
                         visable: true
                     }, {
-                        field: 'BillNo',
-                        title: '采购单号',
+                        field: 'UsedByName',
+                        title: '领用人',
+                        visable: true,
+                        sortable: true
+                    }, {
+                        field: 'OperationByName',
+                        title: '操作人',
                         visable: true
                     }, {
-                        field: 'RegDate',
-                        title: '入库日期',
+                        field: 'ProLineID',
+                        title: '产线ID',
+                        visable: true
+                    }, {
+                        field: 'UsedDate',
+                        title: '领用日期',
                         visable: true,
                         formatter: function (value, row, index) {
                             return changeDateFormat(value)
                         }
                     }, {
-                        field: 'UsedCount',
-                        title: '使用次数',
-                        visable: true,
-
-                    }, {
-                        field: 'Location',
-                        title: '存放库位',
-                        visable: true
+                        field: 'Operation',
+                        title: '操作',
+                        events: operationEvents,
+                        formatter: function (value, row, index) {
+                            return [
+                                '<div class="btn-group">',
+                                '<button id="btn_update" type="button" class="btn btn-warning"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i><span>编辑</span></button>',
+                                '<button id="btn_delete" type="button" class="btn btn-danger" ><i class="glyphicon glyphicon-remove" aria-hidden="true"></i><span>删除</span></button>',
+                                '</div>'
+                            ].join(' ');
+                        }
                     },]
                 });
             };
-            return myTableInit;
+            return outRecordTableInit;
         }
     </script>
 
