--- a/Views/Test/Index.cshtml
+++ b/Views/Test/Index.cshtml
@@ -127,35 +127,35 @@
         };
         var TableInit = function () {
             var myTableInit = new Object();
-            //.初始化 Table
+            // 初始化  Table
             myTableInit.Init = function () {
                 $("#myTable").bootstrapTable({
                     url: '/Test/DoTest',
                     method: 'post',
                     toolbar: '#toolbar',//工具列
                     rowStyle: rowStyle,
-                    theadClasses: "thead-blue",//设置thead-blue为表头样式
-                    cache: false,//禁用缓存
-                    pagination: true,//关闭分页
+                    theadClasses: "thead-blue",  // 设置  thead-blue 为表头样式
+                    cache: false,  //禁用缓存
+                    pagination: true,//分页
                     showFooter: false,//是否显示列脚
                     showPaginationSwitch: false,//是否显示 数据条数选择框
                     sortable: false,//排序
-                    search: true,//启用搜索
+                    search: true, //启用搜索
                     showSearchButton: true,//
                     showFullscreen: true,//全屏按钮
                     showToggle: true,//显示详细视图和列表
                     showColumns: true,
                     showRefresh: true,//显示刷新按钮
-                    clickToSelect: true,//点击选中checkbox
+                    clickToSelect: true,//点击选中 checkbox
                     pageNumber: 1, //初始化加载第一页，默认第一页
                     pageSize: 7,   //每页的记录行数
-                    pageList: [3, 5, 7, 9, 'ALL'], //可供选择的页面显示条数
+                    pageList: [3, 5, 7, 9, 'ALL'],  // 可供选择的页面显示条数
                     maintainSelected: true, //记住选中项即使翻页
                     paginationPreText: "上一页",
                     paginationNextText: "下一页",
                     paginationFirstText: "First",
                     paginationLastText: "Last",
-                    clickToSelect: true,  //是否启动点击选中行
+                    clickToSelect: true,   // 是否启动点击选中行
 
                     Icons: 'glyphicon-export ',
                     columns: [{
