--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -55,7 +55,7 @@
                         <h4 class="modal-title" id="myModalLabel">添加记录</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="/OutRecord/AddOutRecord" method="post">
+                        <form id="addform" onsubmit="return false" action="##" method="post">
                             <span>夹具代码</span>
                             <input type="text" name="code" placeholder="请输入夹具代码" />
                             <br>
@@ -75,7 +75,7 @@
                             <input type="text" name="usedDate" placeholder="请输入夹具代码" id="date" />
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">取消</button>
-                                <button type="submit" class="btn btn-warning">提交</button>
+                                <button type="button" class="btn btn-warning" onclick="addOutRecord()">提交</button>
                             </div>
                         </form>
                     </div>
@@ -93,11 +93,28 @@
         });
 
         function addOutRecord() {
-
+            $.ajax({
+                type: "POST",//方法类型
+                url: "/OutRecord/AddOutRecord" ,//url
+                data: $('#addform').serialize(),
+                success: function (result) {
+                    if (result.success) {
+                        $("#addOutRecordModal").modal('hide');
+                        alert('添加成功');                   
+                        $("#outRecordTable").bootstrapTable('refresh');
+                    }
+                    else {
+                        alert('添加失败');
+                    }
+                },
+                error: function (e) {
+                    alert('添加错误');
+                }
+            });
         }
         //获取要删除的code seqID 并转jsonstr
         function getJsonData() {
-             var rows = $("#outRecordTable").bootstrapTable('getSelections');
+            var rows = $("#outRecordTable").bootstrapTable('getSelections');
             //存储数据
             var ItemCodes = new Array();
             //console.log(rows);
@@ -105,7 +122,7 @@
                 alert("请先选择要删除的记录!");
                 return;
             } else {
-                 //  声明一个object 存储行某几列数据
+                //  声明一个object 存储行某几列数据
                 $(rows).each(function () {
                     var item = new Object();
                     item.Code = this.Code;
@@ -125,21 +142,30 @@
         })
 
         function deleteData(jsonData) {
-              $.ajax({
+            $.ajax({
                 url: "/OutRecord/DeleteOutRecords",
                 type: "post",
                 data: { "ItemCodes": jsonData },
-                  success: function () {
-                      $("#outRecordTable").bootstrapTable('refresh');
+                success: function (result) {
+                    if (result.success) {
+                        alert('删除成功');
+                        $("#outRecordTable").bootstrapTable('refresh');
+                    }
+                    else {
+                        alert('删除失败');
+                    }
+                },
+                error: function (e) {
+                    alert('删除错误');
                 }
             });
         }
-        
+
         //操作列事情
         window.operationEvents = {
             //编辑事件
             'click #btn_update': function (e, value, row, index) {
-               
+
             },
             //删除事件
             'click #btn_delete': function (e, value, row, index) {
