--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -10,10 +10,19 @@
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
     <!-- Latest compiled and minified Locales -->
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/locale/bootstrap-table-zh-CN.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js" type="text/javascript"></script>
     <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootbox.js/5.4.0/bootbox.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+    <script src="https://cdn.bootcss.com/bootbox.js/5.4.0/bootbox.min.js" type="text/javascript"></script>
+    <!-- 消息提示插件：toastr.js -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js "></script>
+    <!-- 弹出框插件 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
+
     <style>
 
         /*表头样式*/
@@ -86,96 +95,148 @@
 
     <script type="text/javascript">
 
+
         $(function () {
             var itable = TableInit();//.初始化  Table
             itable.Init();
 
         });
+        toastr.options = {
+            closeButton: false,                                            // 是否显示关闭按钮，（提示框右上角关闭按钮）
+            debug: false,                                                    // 是否使用deBug模式
+            progressBar: true,                                            // 是否显示进度条，（设置关闭的超时时间进度条）
+            positionClass: "toast-bottom-center",              // 设置提示款显示的位置
+            onclick: null,                                                     // 点击消息框自定义事件 
+            showDuration: "300",                                      // 显示动画的时间
+            hideDuration: "1000",                                     //  消失的动画时间
+            timeOut: "2000",                                             //  自动关闭超时时间 
+            extendedTimeOut: "1000",                             //  加长展示时间
+            showEasing: "swing",                                     //  显示时的动画缓冲方式
+            hideEasing: "linear",                                       //   消失时的动画缓冲方式
+            showMethod: "fadeIn",                                   //   显示时的动画方式
+            hideMethod: "fadeOut"                                   //   消失时的动画方式
+        };
+        function addOutRecord() {
 
-         function addOutRecord() {
             $.ajax({
                 type: "POST",//方法类型
-                url: "/OutRecord/AddOutRecord" ,//url
+                url: "/OutRecord/AddOutRecord",//url
                 data: $('#addform').serialize(),
                 success: function (result) {
                     if (result.success) {
+                        toastr.success('添加成功');
                         $("#addOutRecordModal").modal('hide');
-                        alert('添加成功');                   
+                        $("form")[0].reset(); //清除数据
                         $("#outRecordTable").bootstrapTable('refresh');
+
                     }
                     else {
-                        alert('添加失败');
+                        toastr.warning(result.msg);
                     }
                 },
                 error: function (e) {
-                    alert('添加错误');
-                }
+                    toastr.error('添加错误');
+                    }
             });
         }
-        //获取要删除的code seqID 并转jsonstr
+
+        //获取要删除的code seqID date 并转jsonstr
         function getJsonData() {
-             var rows = $("#outRecordTable").bootstrapTable('getSelections');
+            var rows = $("#outRecordTable").bootstrapTable('getSelections');
             //存储数据
-            var ItemCodes = new Array();
+            var ItemIDs = new Array();
             //console.log(rows);
             if (rows.length == 0) {// rows 主要是为了判断是否选中，下面的else内容才是主要
-                alert("请先选择要删除的记录!");
+                toastr.warning("请先选择要删除的记录!");
                 return;
             } else {
-                 //  声明一个object 存储行某几列数据
+                //  声明一个object 存储行某几列数据
                 $(rows).each(function () {
                     var item = new Object();
-                    item.Code = this.Code;
-                    item.SeqID = this.SeqID;
-                    ItemCodes.push(item);
-                    console.log(ItemCodes);
+                    item.ID = this.ID;
+                    ItemIDs.push(item);
+
                 });
             }
-            return JSON.stringify(ItemCodes);
+            return JSON.stringify(ItemIDs);
         }
+
         //btn_remove 事件
         $("#btn_remove").on("click", function () {
             //获取选中数据
             var jsonData = getJsonData();
+            var result;
             //删除数据
-            deleteData(jsonData);
+            swal.fire({
+                title: '确定删除吗？',
+                text: '你将无法恢复它！',
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '确定删除！',
+                cancelButtonText: '取消删除！',
+                confirmButtonClass: 'btn btn-success',
+                cancelButtonClass: 'btn btn-danger',
+                buttonsStyling: false
+            }).then(function (isConfirm) {
+                if (isConfirm.value === true) {
+                    swal.fire(
+                        '已删除！',
+                        '记录已被删除',
+                        'success'
+                    ).then(function () {
+                         deleteData(jsonData);
+                    })
+                    
+                } else if (isConfirm.dismiss == 'cancel') {
+                    swal.fire(
+                        '已取消！',
+                        '记录未被删除',
+                        'error'
+                    );
+                }
+            })
         })
 
         function deleteData(jsonData) {
-               $.ajax({
+            $.ajax({
                 url: "/OutRecord/DeleteOutRecords",
                 type: "post",
-                data: { "ItemCodes": jsonData },
+                data: { "ItemIDs": jsonData },
                 success: function (result) {
                     if (result.success) {
-                        alert('删除成功');
                         $("#outRecordTable").bootstrapTable('refresh');
+                        toastr.success('删除成功');
                     }
                     else {
-                        alert('删除失败');
+                        toastr.warning('删除失败');
                     }
                 },
                 error: function (e) {
-                    alert('删除错误');
+                    toastr.error('删除错误');
                 }
             });
         }
-        
         //操作列事情
         window.operationEvents = {
             //编辑事件
             'click #btn_update': function (e, value, row, index) {
-               
+
             },
             //删除事件
             'click #btn_delete': function (e, value, row, index) {
-                alert(index);
+                var ItemIDs = new Array();
+                Item = new Object();
+                Item.ID = row.ID;
+                ItemIDs.push(Item);
+                console.log(JSON.stringify(ItemIDs));
+                deleteData(JSON.stringify(ItemIDs));
             }
         }
 
         //行样式
         function rowStyle(row, index) {
-
             var classes = ['success', 'danger']
             return { classes: classes[index % classes.length] };
         }
@@ -188,7 +249,9 @@
                 var currentDate = date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
                 var hours = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
                 var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+
                 var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
+
                 return date.getFullYear() + "-" + month + "-" + currentDate + " " + hours + ":" + minutes + ":" + seconds;
 
             }
@@ -207,8 +270,9 @@
                     cache: false, //禁用缓存
                     pagination: true,//关闭分页
                     showFooter: false,//是否显示列脚
-                    showPaginationSwitch: false,//是否显示 数据条数选择框
-                    sortable: false,//排序
+                    showPaginationSwitch: false, //是否显示 数据条数选择框
+                    sortable: true,                     //是否启用排序
+                    sortOrder: "asc",                   //排序方式
                     search: true, //启用搜索
                     showSearchButton: true,  //
                     showFullscreen: true,   // 全屏按钮
@@ -219,7 +283,7 @@
                     pageNumber: 1, //初始化加载第一页，默认第一页
                     pageSize: 7,   //每页的记录行数
                     pageList: [3, 5, 7, 9, 'ALL'],   //可供选择的页面显示条数
-                    maintainSelected: true, //记住选中项即使翻页
+                    maintainSelected: true,  //记住选中项即使翻页
                     paginationPreText: "上一页",
                     paginationNextText: "下一页",
                     paginationFirstText: "First",
@@ -227,21 +291,29 @@
                     //clickToSelect: false ,
 
                     Icons: 'glyphicon-export ',
+
                     columns: [{
                         title: "全选", field: "select", checkbox: true
                     }, {
+                        field: 'ID',
+                        title: '编号',
+                        visable: true,
+                        sortable: true
+                    },
+                    {
                         field: 'Code',
                         title: '夹具代码',
-                        visable: true
+                        visable: true,
                     }, {
                         field: 'SeqID',
                         title: '夹具序列号',
-                        visable: true
+                        visable: true,
+
                     }, {
                         field: 'UsedByName',
                         title: '领用人',
                         visable: true,
-                        sortable: true
+
                     }, {
                         field: 'OperationByName',
                         title: '操作人',
